--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
                 <title>웹 개발 입문</title>
   </head>
   <body>
+    <img src="login.png">
     <h1>웹 개발 기초</h1>
     <h5>웹 개발 기초</h5>
     <p>HTML</p>
